--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 
 </body>
-<script src="dolares.js"></script>
+<script src="dolares.min.js"></script>
 <script src="main.js"></script>
 </html>
